kube-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s_demo_api
spec:
  type: LoadBalancer # NodePort
  ports:
  - protocol: TCP
    port: 5001
  selector:
    app: k8s_demo_api

---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: k8s_demo_api-v1
  namespace: default
  labels:
    app: k8s_demo_api
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: k8s_demo_api
    spec:
      containers:
        - image: "giffy2499/k8sdemoapi:v1"
          imagePullPolicy: Always #IfNotPresent, Never
          name: k8s_demo_api
          ports:
            - containerPort: 5001
